Fortran/IBM/execute/F2008/intrinsics/error/unit_tests/erfc_scaled03.scenario
#BEGINSCENARIO
#BEGINDOC
#NAME=F2008/intrinsics/error/unit_tests/erfc_scaled03.scenario
#FEATURE = F2008 ERFC_SCALED intrinsic
#CREATOR = Rafik Zurob
#DATE    = 20110501
#TEST_TYPE=unit
#ENDDOC

#BEGINCONTROL

#CMD       = F_COMPILE
#INPUT     = $(tcasedir)erfc_scaled03.f
#OUTPUT    = erfc_scaled03$(OBJ)
#ENDCMD

#CMD       = F_LINK
#INPUT     = erfc_scaled03$(OBJ)
#OUTPUT    = erfc_scaled03$(EXE)
#ENDCMD

#CMD       = RUN
#INPUT     = erfc_scaled03$(EXE)
#ENDCMD

#ENDCONTROL
#ENDSCENARIO
